# kuka_manipulator_gazebo

./: CMakeLists.txt  CMakeLists.txt~  KUKA_manipulator_exmple.ogv  README.md  README.md~  package.xml  package.xml~
config/: manipulator_control.yaml  manipulator_control.yaml~
launch/: manipulator_control.launch~  manipulator_empty_world.launch
robots/: manipulator.URDF  manipulator.URDF~
src/: move_arm_server.cpp  move_arm_server.cpp~
srv/: MoveArm.srv~
